// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass active flag to active slot 1`] = `
<div>
  <Button
    active={false}
    id="one"
  />
  <Button2
    active={true}
    id="two"
  />
</div>
`;

exports[`should renderer only active slot if onlyActive=true 1`] = `
<div>
  <Button2
    active={true}
    id="two"
  />
</div>
`;

exports[`should renderer slots and pass props 1`] = `
<div>
  <Button
    id="one"
  />
  <Button2
    id="two"
  />
</div>
`;
